apps/home/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  type: ClusterIP
  selector:
    app: home
  ports:
    - name: home-web
      port: 3000
      targetPort: 3000
      protocol: TCP
